core: Support the new macOS Homebrew location.

* src/posix-util.c (find_executable): Extend the path.
--

GnuPG-bug-id: 6440