src/posix-util.c
@@ -144,7 +144,8 @@ find_executable (const char *pgm)
   /* On apple, especially when started through gpgme-json via
      the browser interface we should look into some additional
      fallback paths. */
-  const char *additional_path = "/usr/local/bin:/usr/local/MacGPG2/bin";
+  const char *additional_path
+    = "/usr/local/bin:/usr/local/MacGPG2/bin:/opt/homebrew/bin";
   if (!ret)
     {
       ret = walk_path_str (additional_path, pgm);
